--- a/public/src/style.css
+++ b/public/src/style.css
@@ -265,7 +265,8 @@ ul li .submenu {
 
 
 .news-section {
-    width: 990px;
+    max-width: 960px;
+    width: 100%;
     background: white;
     padding: 20px;
     border-radius: 10px;
